[update] implémentation du cours du vendredi 26/08/2022 au matin

--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ DATABASE_URL="mysql://rootSoufian:root@127.0.0.1:3306/annonces-lexom?serverVersi
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://:@127.0.0.1:1025
 ###< symfony/mailer ###
