[update] implémentation de l'authentification

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,6 +6,10 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -19,12 +23,17 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/annonce/edit, roles: ['ROLE_SELLER', 'ROLE_ADMIN'] }
+        - { path: ^/annonce/delete, roles: ['ROLE_SELLER', 'ROLE_ADMIN'] }
 
 when@test:
     security:
